--- a/semi_restful_tv_shows/tv_shows_app/templates/new_show.html
+++ b/semi_restful_tv_shows/tv_shows_app/templates/new_show.html
@@ -18,7 +18,7 @@
             <div class="col-sm-8 offset-sm-2">
                 <a class="float-right" href="/shows">Go Back</a>
                 <h1 class="text-left mb-4">Add a New Show</h1>
-                <form action="#" method="POST">
+                <form action="/shows/create" method="POST">
                     {% csrf_token %}
                     {% comment %} form grid here {% endcomment %}
                     <div class="form-group">
