--- a/semi_restful_tv_shows/tv_shows_app/templates/shows.html
+++ b/semi_restful_tv_shows/tv_shows_app/templates/shows.html
@@ -14,7 +14,33 @@
 
 <body>
     <div class="container">
-        test
+        <table class="table table-bordered table-striped mb-4">
+            <thead class="thead-dark">
+                <tr>
+                    <th scope="col">ID</th>
+                    <th scope="col">Title</th>
+                    <th scope="col">Network</th>
+                    <th scope="col">Release Date</th>
+                    <th scope="col">Actions</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for show in shows %}
+                <tr>
+                    <td>{{ show.id }}</td>
+                    <td>{{ show.title }}</td>
+                    <td>{{ show.network }}</td>
+                    <td>{{ show.release_date }}</td>
+                    <td>
+                        <a href="/shows/{{ show.id }}">Show </a>
+                        <a href="/shows/{{ show.id }}/edit">Edit </a>
+                        <a href="/shows/{{ show.id }}/destroy">Delete</a>
+                    </td>
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+        <a href="/shows/new">Add a New Show</a>
     </div>
 </body>
 
