--- a/semi_restful_tv_shows/tv_shows_app/templates/edit_show.html
+++ b/semi_restful_tv_shows/tv_shows_app/templates/edit_show.html
@@ -13,8 +13,37 @@
 </head>
 
 <body>
-    <div class="container">
-
+    <div class="container mt-5">
+        <div class="row">
+            <div class="col-sm-8 offset-sm-2">
+                <a class="float-right" href="/shows">Go Back</a>
+                <h1 class="text-left mb-4">Edit Show #{{ this_show.id }}</h1>
+                <form action="/shows/create" method="POST">
+                    {% csrf_token %}
+                    {% comment %} form grid here {% endcomment %}
+                    <div class="form-group">
+                        <label for="title">Title</label>
+                        <input class="form-control" type="text" id="title" name="title">
+                    </div>
+                    <div class="form-row">
+                        <div class="form-group col-md-6">
+                            <label for="network">Network</label>
+                            <input class="form-control" type="text" id="network" name="network">
+                        </div>
+                        <div class="form-group col-md-6">
+                            <label for="releaseDate">Release Date</label>
+                            <input class="form-control" type="date" id="releaseDate" name="releaseDate">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="description">Description</label>
+                        <textarea class="form-control col-md-12" type="text" id="description" rows="4"
+                            name="description"></textarea>
+                    </div>
+                    <button type="submit" class="btn btn-primary mt-2">Submit</button>
+                </form>
+            </div>
+        </div>
     </div>
 </body>
 
